# ot-commissioner

./: .clang-format  .clang-tidy  .clangd  .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build.sh  conanfile.txt  tatus:q
.github/workflows/: android-app-build.yml  android-app-release.yml  android-build.yml  android-release.yml  android.yml  build.yml  codeql.yml  tests.yml
.travis/: after_success.sh  script.sh
android/: BUILDING.md  README.md  build-commissioner-libs.sh
android/openthread_commissioner/: .gitignore  build.gradle  gradlew  settings.gradle
android/openthread_commissioner/app/: build.gradle
android/openthread_commissioner/app/src/main/: AndroidManifest.xml
android/openthread_commissioner/app/src/main/res/drawable-anydpi/: ic_openthread.xml
android/openthread_commissioner/app/src/main/res/layout/: activity_main.xml  border_agent_list_item.xml  fragment_get_admin_passcode.xml  fragment_input_network_password.xml  fragment_meshcop.xml  fragment_retrieve_dataset.xml  fragment_scan_qrcode.xml  fragment_select_border_router.xml  fragment_select_network.xml  fragment_set_dataset.xml
android/openthread_commissioner/app/src/main/res/menu/: menu_main.xml
android/openthread_commissioner/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
android/openthread_commissioner/app/src/main/res/values-night/: themes.xml
android/openthread_commissioner/examples/qrcode/: README.md
android/openthread_commissioner/gradle/wrapper/: gradle-wrapper.properties
android/openthread_commissioner/service/: .gitignore  build.gradle
android/openthread_commissioner/service/src/main/: AndroidManifest.xml
android/openthread_commissioner/service/src/main/res/layout/: fragment_fetch_credential_dialog.xml  fragment_meshcop.xml  fragment_network_password_dialog.xml  fragment_retrieve_dataset.xml  fragment_scan_qrcode.xml  fragment_select_border_router.xml  (+2 more)
cmake/: FindLibevent.cmake  FindMbedTLS.cmake
example/: BUILDING.md  CMakeLists.txt  README.md  mini_commissioner.cpp
include/commissioner/: border_agent.hpp  commissioner.hpp  defines.hpp  error.hpp  network_data.hpp  network_diag_data.hpp  network_diagnostic_tlvs.hpp
openwrt/ot-commissioner/: Makefile
script/: bootstrap.sh  build  check-pretty.sh  clang-format  install-swig-4.0.sh  make-pretty  make-pretty.sh  mdns-browser.py  rebuild  remake  test
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app_config.hpp  border_agent.cpp  border_agent.hpp  border_agent_functions_mock.cpp  border_agent_functions_mock.hpp  br_discover.cpp  br_discover.hpp  commissioner_app.cpp  commissioner_app.hpp  commissioner_app_dummy.cpp  commissioner_app_mock.cpp  commissioner_app_mock.hpp  commissioner_app_test.cpp  file_logger.cpp  file_logger.hpp  file_util.cpp  file_util.hpp  file_util_test.cpp  json.cpp  json.hpp  json_test.cpp  logger_util.hpp  mdns_handler.cpp  mdns_handler.hpp  sys_logger.cpp  sys_logger.hpp
src/app/cli/: CMakeLists.txt  README.md  border_agent_functions_mock.hpp  commissioner_app_mock.hpp  console.cpp  console.hpp  gmock_main.cpp  interpreter.cpp  interpreter.hpp  interpreter_test.cpp  job.cpp  job.hpp  job_manager.cpp  job_manager.hpp  job_manager_test.cpp  main.cpp  security_materials.cpp  security_materials.hpp  test_interpreter.cpp  test_job_manager.cpp
src/app/etc/commissioner/: README.md  active-dataset.json  ccm-config.json  config.json  non-ccm-config.json  pending-dataset.json
src/app/etc/commissioner/credentials/: certificate.pem  private-key.pem  trust-anchor.pem
src/app/ps/: CMakeLists.txt  file.cpp  file.hpp  nlohmann_json.hpp  persistent_storage.hpp  persistent_storage_json.cpp  persistent_storage_json.hpp  persistent_storage_json_test.cpp  registry.cpp  registry.hpp  registry_entries.cpp  registry_entries.hpp  registry_test.cpp  semaphore.cpp  semaphore.hpp  semaphore_posix.hpp  utils.cpp  utils.hpp
src/common/: CMakeLists.txt  address.cpp  address.hpp  address_test.cpp  error.cpp  error_macros.hpp  error_test.cpp  file_util.cpp  file_util.hpp  file_util_test.cpp  logging.cpp  logging.hpp  time.cpp  time.hpp  utils.cpp  utils.hpp  utils_test.cpp
src/java/: CMakeLists.txt  README.md  commissioner.i
src/ut/: CMakeLists.txt  main.cpp
src/ut/app/: CMakeLists.txt  border_agent_functions_mock.cpp  border_agent_functions_mock.hpp  commissioner_app_mock.cpp  commissioner_app_mock.hpp  commissioner_app_replace.cpp  job_manager_mock.hpp  test_interpreter.cpp  test_job_manager.cpp
src/ut/app/ps/: CMakeLists.txt  persistent-storage-mock.hpp  test-registry.cpp
tests/: CMakeLists.txt
tests/etc/avahi/services/: border-agent.service
tests/integration/: bootstrap.sh  common.sh  diag_query_test.sh  run_tests.sh  test_announce_begin.sh  test_bbr_dataset.sh  test_br_scan.sh  test_ccm.sh  test_ccm_ae_joining.sh  test_ccm_nmkp_joining.sh  test_ccm_petition.sh  test_cli.sh  test_diag_query.sh  test_discover.sh  test_domain_syntax.sh  test_energy_scan.sh  test_joining.sh  test_mlr.sh  test_native_commissioner.sh  test_operational_dataset.sh  test_pan_id_query.sh  test_petition.sh
tests/integration/etc/br_scan_initial/: br_scan_border_agent-1.service  br_scan_border_agent-2.service  br_scan_border_agent-3.service  br_scan_border_agent-4.service  br_scan_border_agents.service
tests/integration/etc/br_scan_modified/: br_scan_border_agent-1.service  br_scan_border_agent-2.service  br_scan_border_agent-3.service  br_scan_border_agent-4.service
tests/integration/etc/test_harness/: border-agent.service
tests/integration/mini_commissioner/: test_mini_commissioner.sh
tests/unit/: CMakeLists.txt  main.cpp  test_address.cpp  test_coap.cpp  test_coap_secure.cpp  test_commissioner_impl.cpp  test_cose.cpp  test_dtls.cpp  test_json.cpp  test_mesh_local_addr.cpp  test_pskc.cpp  test_socket.cpp  test_token_manager.cpp
tools/: CMakeLists.txt
tools/commissioner_thci/: README.md  commissioner.py  commissioner_ctl.py  commissioner_impl.py  commissionerd.py  commissionerd.service  example_send_mlr.py
(+65 files in other folders)
